--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "react-window": "^1.8.5"
+    "react-window": "^1.8.5",
+    "typeface-lato": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
